--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     </dependency>
     
     <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit-dep</artifactId>
+        <version>4.8.2</version>
+    </dependency>
+    
+    <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-server</artifactId>
         <version>9.2.5.v20141112</version>
